# PyLighter

./: .flake8  .gitignore  Changelog.md  LICENSE  MANIFEST.in  Makefile  README.md  config.py  display.py  pylighter.py  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini  utils.py
.github/workflows/: test.yml  test_packaging.yml  testing.yml
css/: color.css  style.css
demo/: Adding additional elements.ipynb  Adding_additional_elements.ipynb  Annotated_corpus.ipynb  Shortcut_helper.ipynb  Simple_usage.ipynb  slides.html
js/: key_shortcut.js  key_shortcuts.js
pylighter/: __init__.py  annotation.py  chunk_models.py  config.py  display.py  loader.html  utils.py
pylighter/css/: style.css
pylighter/js/: key_shortcut.js
pylighter/shortcut_helper/: shortcut_helper.js  shortcut_helper.py
pylighter/toast/: toast.css
shortcut_helper/: shortcut_helper.js  shortcut_helper.py
test/: test_annotation.py  test_utils.py
tests/: annotation.py  chunk_models.py  pylighter.py  test_chunk_models.py  utils.py
toast/: toast.html  toast.js
