[metadata]
name = pylighter
version = 0.0.2
license_file = LICENSE
description = Annotation tool for NER tasks on Jupyter 
long_description = file: README.md
long_description_content_type = text/markdown
author = Etienne Turc
author_email = etienne.turc@paylead.fr
url = https://github.com/PayLead/PyLighter
keywords = annotation, NER, Jupyter, labelize
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable 
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = false
include_package_data = true
packages = 
    pylighter
    pylighter.shortcut_helper
python_requires = >=3.7
install_requires =
    ipython>=7.18.1
    ipywidgets>=7.5.1
    pandas>=1.1.1
setup_requires = setuptools

[options.extras_require]
dev =
# Quality
    check-manifest
    flake8
    isort>=5.0.0
    tox
# Testing tools
    pytest>=6.1.1
# Releasing
    wheel
    zest.releaser[recommended]

[options.package_data]
pylighter =
   pylighter/*.html
   pylighter/toast/*
   pylighter/css/*
   pylighter/js/*
   pylighter/shortcut_helper/*.js

[bdist_wheel]
universal = 1

[zest.releaser]
; semver-style versions
version-levels = 3

[distutils]
index-servers = pypi

[flake8]
max-line-length = 90

[isort]
line_length = 90

[tool:pytest]
python_files=**/test*.py
testpaths=test
